# bevy_catenary

./: ARCHITECTURE.md  Cargo.toml  DATA_STRUCTURES.md  DESIGN.md  EXAMPLE_PLAN.md  IMPLEMENTATION_PLAN.md  README.md  TODO.md  TRAITS.md  plan-build-bevy-catenary.md
.claude/: settings.local.json
.github/workflows/: ci.yml
examples/: cable_playground.rs  playground.rs
examples/playground/: animation.rs  connector.rs  constants.rs  detach_demo.rs  entities.rs  input.rs  main.rs  navigation.rs  scene.rs  sections.rs  ui.rs
examples/playground/scene/: astar.rs  cap_styles.rs  catenary.rs  entity_attachment.rs  inside_view.rs  mod.rs  scaffold.rs  shared_hub.rs  solver_comparison.rs
plan/: ARCHITECTURE.md
src/: gizmos.rs  lib.rs
src/cable/: compute.rs  constants.rs  endpoint.rs  mod.rs
src/gizmos/: constants.rs  debug.rs  mod.rs  render.rs
src/mesh/: buffers.rs  caps.rs  config.rs  constants.rs  elbows.rs  frames.rs  handle.rs  mod.rs  tube.rs
src/plugin/: components.rs  constants.rs  mesh.rs  mod.rs  systems.rs
src/plugin/mesh/: caps.rs  config.rs  elbows.rs  frames.rs  mod.rs  path.rs
src/routing/: catenary.rs  constants.rs  enums.rs  geometry.rs  mod.rs  obstacle.rs  orthogonal.rs  pathfinding.rs  solver.rs  solver_selection.rs  types.rs
tests/: endpoint_tests.rs  routing_tests.rs
